<resources>
    <string name="app_name">নিরাপদ থাকুন</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="nari_surokkha_button">নারী সুরক্ষা</string>
    <string name="dhaka_division_button">ঢাকা বিভাগ</string>
    <string name="khulna_division_button">খুলনা বিভাগ</string>
    <string name="chittagong_division_button">চট্রগ্রাম বিভাগ</string>
    <string name="rajshahi_division_button">রাজশাহী বিভাগ</string>
    <string name="borisal_division_button">বারিশাল বিভাগ</string>
    <string name="sylhet_division_button">সিলেট বিভাগ</string>
    <string name="rangpur_division_button">রংপুর বিভাগ</string>
    <string-array name="nav_drawer_item">
        <item>হোম</item>
        <item>নারী সুরক্ষা</item>
        <item>ঢাকা বিভাগ</item>
        <item>খুলনা বিভাগ</item>
        <item>চট্রগ্রাম বিভাগ</item>
        <item>রাজশাহী বিভাগ </item>
        <item>বারিশাল বিভাগ</item>
        <item>সিলেট বিভাগ</item>
        <item>রংপুর বিভাগ</item>
        <item>আমার  সম্পর্কে জানুন</item>
    </string-array>
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="dhaka_district_name_in_bangla">ঢাকা জেলা</string>
    <string name="faridpur_district_name_in_bangla">ফারিদপুর  জেলা </string>
    <string name="gazipur_district_name_in_bangla">গাজীপুর  জেলা </string>
    <string name="goplagonj_district_name_in_bangla">গোপালগঞ্জ জেলা</string>
    <string name="jamalpur_district_name_in_bangla">জামালপুর জেলা</string>
    <string name="kishoreganj_district_name_in_bangla">কিশোরগঞ্জ জেলা</string>
    <string name="madaripur_district_name_in_bangla">মাদারিপুর জেলা</string>
    <string name="manikganj_district_name_in_bangla">মানিকগঞ্জ জেলা</string>
    <string name="munshiganj_district_name_in_bangla">মুন্সিগঞ্জ জেলা</string>
    <string name="mymensingh_district_name_in_bangla">ময়মনসিংহ জেলা</string>
    <string name="narayanganj_district_name_in_bangla">নারায়গঞ্জ জেলা</string>
    <string name="narsingdi_district_name_in_bangla">নরসিংদী জেলা </string>
    <string name="netrokona_district_name_in_bangla">নেত্রকোনা জেলা</string>
    <string name="rajbari_district_name_in_bangla">রাজবাড়ী জেলা</string>
    <string name="shariatpur_district_name_in_bangla">শারিয়াতপুর জেলা</string>
    <string name="sherpur_district_name_in_bangla">শেরপুর জেলা</string>
    <string name="tangail_district_name_in_bangla">টাঙ্গাইল জেলা</string>
    <string name="borguna_district_name_in_bangla">বরগুনা  জেলা</string>
    <string name="borisal_district_name_in_bangla">বরিশাল  জেলা</string>
    <string name="vhola_district_name_in_bangla">ভোলা  জেলা</string>
    <string name="jhalokhati_district_name_in_bangla">ঝালকাঠী  জেলা</string>
    <string name="potuakhali_district_name_in_bangla">পটুয়াখালী  জেলা</string>
    <string name="pirojpur_district_name_in_bangla">পিরোজপুর  জেলা</string>
    <string name="sadar_thana_barisal_district">সদর থানা</string>
    <string name="bakerganj_thana_barisal_district">বাকেরগঞ্জ  থানা</string>
    <string name="babuganj_thana_barisal_district">বাবুগঞ্জ  থানা</string>
    <string name="wazirpur_thana_barisal_district">উজিরপুর   থানা</string>
    <string name="banipara_thana_barisal_district">বানারীপাড়া  থানা</string>
    <string name="gournodi_thana_barisal_district">গৌরনদী  থানা</string>
    <string name="agailjhara_thana_barisal_district">আগৈলঝাড়া  থানা</string>
    <string name="hizla_thana_barisal_district">হিজলা  থানা</string>
    <string name="mehendiganj_thana_barisal_district">মেহেন্দিগঞ্জ  থানা</string>
    <string name="muladi_thana_barisal_district">মুলাদী  থানা</string>
    <string name="duity_officer_barisal_sadar_thana_button">ডিউটি  অফিসার \n০১৭৬০৫৬৮৬৩৯</string>
    <string name="rab_barisal_sadar_thana_button">র‌্যাব \n০১৭৬০৫৬৮৬৩৯</string>
    <string name="oc_barisal_sadar_thana_button">ও সি  \n০১৭৬০৫৬৮৬৩৯</string>
    <string name="db_barisal_sadar_thana_button">ডি বি  \n০১৭৬০৫৬৮৬৩৯</string>
    <string name="bandarban_district_name_in_bangla">বান্দরবান  জেলা</string>
    <string name="brammanbaria_district_name_in_bangla">ব্রাক্ষ্মণবাড়িয়া  জেলা</string>
    <string name="chadpur_district_name_in_bangla">চাঁদপুর  জেলা</string>
    <string name="chittagong_district_name_in_bangla">চট্রগ্রাম  জেলা</string>
    <string name="comilla_district_name_in_bangla">কুমিল্লা  জেলা</string>
    <string name="cox_district_name_in_bangla">কক্সবাজার  জেলা</string>
    <string name="feni_district_name_in_bangla">ফেনী  জেলা</string>
    <string name="khagracori_district_name_in_bangla">খাগড়াছড়ি  জেলা</string>
    <string name="lokkhipur_district_name_in_bangla">লক্ষ্মীপুর  জেলা</string>
    <string name="noakhali_district_name_in_bangla">নোয়াখালী জেলা</string>
    <string name="rangamati_district_name_in_bangla">রাঙ্গামাটি  জেলা</string>
    <string name="bagerhat_district_name_in_bangla">বাগেরহাট  জেলা</string>
    <string name="chuadanga_district_name_in_bangla">চুয়াডাঙ্গা  জেলা</string>
    <string name="jessore_district_name_in_bangla">যশোর  জেলা</string>
    <string name="jhenaidah_district_name_in_bangla">ঝিনাইদহ  জেলা</string>
    <string name="khulna_district_name_in_bangla">খুলনা  জেলা</string>
    <string name="kustia_district_name_in_bangla">কুষ্টিয়া  জেলা</string>
    <string name="magura_district_name_in_bangla">মাগুরা  জেলা</string>
    <string name="meherpur_district_name_in_bangla">মেহেরপুর  জেলা</string>
    <string name="norail_district_name_in_bangla">নড়াইল  জেলা</string>
    <string name="shatkhira_district_name_in_bangla">সাতক্ষীরা  জেলা</string>
    <string name="bogra_district_name_in_bangla">বগুড়া  জেলা</string>
    <string name="chapainawabganj_district_name_in_bangla">চাঁপাই নবাবগঞ্জ  জেলা</string>
    <string name="joypurhat_district_name_in_bangla">জয়পুরহাট  জেলা</string>
    <string name="pabna_district_name_in_bangla">পাবনা  জেলা</string>
    <string name="naogaon_district_name_in_bangla">নওগাঁ  জেলা</string>
    <string name="natore_district_name_in_bangla">নাটোর  জেলা</string>
    <string name="rajshahi_district_name_in_bangla">রাজশাহী  জেলা</string>
    <string name="sirajgonj_district_name_in_bangla">সিরাজগঞ্জ  জেলা</string>
    <string name="dinajpur_district_name_in_bangla">দিনাজপুর  জেলা</string>
    <string name="gaibandha_district_name_in_bangla">গাইবান্ধা  জেলা</string>
    <string name="kurigram_district_name_in_bangla">কুড়িগ্রাম  জেলা</string>
    <string name="lalmonirhat_district_name_in_bangla">লালমনিরহাট  জেলা</string>
    <string name="nilphamari_district_name_in_bangla">নীলফামারী  জেলা</string>
    <string name="panchagar_district_name_in_bangla">পঞ্চগড়  জেলা</string>
    <string name="rongpur_district_name_in_bangla">রংপুর  জেলা</string>
    <string name="thakurgaon_district_name_in_bangla">ঠাকুরগাঁও  জেলা</string>
    <string name="hobiganj_district_name_in_bangla">হবিগঞ্জ  জেলা</string>
    <string name="moulvibazar_district_name_in_bangla">মৌলভীবাজার  জেলা</string>
    <string name="sunamganj_district_name_in_bangla">সুনামগঞ্জ  জেলা</string>
    <string name="sylhet_district_name_in_bangla">সিলেট  জেলা</string>
    <string name="akkelpur_thana_joyurhat">আক্কেলপুর থানা</string>
    <string name="sadar_thana_joyurhat">সদর থানা</string>
    <string name="kalai_thana_joyurhat">কালাই থানা</string>
    <string name="khetlal_thana_joyurhat">ক্ষেতলাল </string>
    <string name="panchbibi_thana_joyurhat">পাঁচবিবি </string>
    <string name="adamdighi_thana_bogra">আদমদিঘী</string>
    <string name="sadar_thana_bogra">সদর</string>
    <string name="dhunat_thana_bogra">ধুনট</string>
    <string name="dhupchanchia_thana_bogra">ধুপচাঞ্ছিয়া</string>
    <string name="gabtali_thana_bogra">গাবতলি</string>
    <string name="kahaloo_thana_bogra">কাহালু</string>
    <string name="nandigram_thana_bogra">নন্দীগ্রাম</string>
    <string name="sariakandi_thana_bogra">সারিয়াকান্দি</string>
    <string name="shajhanpur_thana_bogra">শাজাহানপুর</string>
    <string name="sherpur_thana_bogra">শেরপুর</string>
    <string name="shibganj_thana_bogra">শিবগঞ্জ</string>
    <string name="sonatola_thana_bogra">সোনাতলা</string>
    <string name="atrai_thana_naogaon">আত্রাই</string>
    <string name="badalgachhi_thana_naogaon">বাদলগাছি</string>
    <string name="manada_thana_naogaon">মানদা</string>
    <string name="dhamoirhat_thana_naogaon">ধমইরহাট</string>
    <string name="mohadevpur_thana_naogaon">মহাদেভপুর</string>
    <string name="sadar_thana_naogaon">সদর</string>
    <string name="niamtpur_thana_naogaon">নিয়ামতপুর</string>
    <string name="patnitala_thana_naogaon">পত্নীতলা</string>
    <string name="porsha_thana_naogaon">পরশা</string>
    <string name="raninagar_thana_naogaon">রানীনগর</string>
    <string name="sapahar_thana_naogaon">সাপাহার</string>
    <string name="bagatipara_thana_natore">বাগাতিপারা</string>
    <string name="baraigram_thana_natore">বড়াইগ্রাম</string>
    <string name="gurudaspur_thana_natore">গুরুদাসপুর</string>
    <string name="lalpur_thana_natore">লালপুর</string>
    <string name="sadar_thana_natore">সদর</string>
    <string name="singra_thana_natore">শিঙরা</string>
    <string name="naldanga_thana_natore">নলদাঙ্গা</string>
    <string name="bholahat_thana_nawabganj">ভলাহাট</string>
    <string name="gomastaur_thana_nawabganj">গমস্তাপুর</string>
    <string name="nachole_thana_nawabganj">নাচোল</string>
    <string name="sadar_thana_nawabganj">সদর</string>
    <string name="shibganj_thana_nawabganj">শিবগঞ্জ</string>
    <string name="ataikula_thana_pabna">আতাইকলা</string>
    <string name="atgharia_thana_pabna">আটঘারিয়া</string>
    <string name="bera_thana_pabna">বেড়া</string>
    <string name="bhangura_thana_pabna">ভাঙ্গুরা</string>
    <string name="chatmohar_thana_pabna">চাটমোহর</string>
    <string name="faridpur_thana_pabna">ফরিদপুর</string>
    <string name="ishwardi_thana_pabna">ঈশ্বরদী</string>
    <string name="sadar_thana_pabna">সদর</string>
    <string name="santhia_thana_pabna">সাথিয়া</string>
    <string name="sujanagar_thana_pabna">সুজানগর</string>
    <string name="belkuchi_thana_sirajganj">বেলকুচি</string>
    <string name="chuahali_thana_sirajganj">ছুয়াহালি</string>
    <string name="kamarkhanda_thana_sirajganj">কামারকান্দা</string>
    <string name="kazipur_thana_sirajganj">কাজিপুর</string>
    <string name="raiganj_thana_sirajganj">রাণীগঞ্জ</string>
    <string name="sadar_thana">সদর</string>
    <string name="astagram_thana_kishoreganj">অষ্টগ্রাম</string>
    <string name="bajitpur_thana_kishoreganj">বাজিতপুর</string>
    <string name="bhairab_thana_kishoreganj">ভৈরব</string>
    <string name="hossainpur_thana_kishoreganj">হোসেনপুর</string>
    <string name="itna_thana_kishoreganj">ইটনা</string>
    <string name="karimganj_thana_kishoreganj">করিমগঞ্জ</string>
    <string name="katiadi_thana_kishoreganj">কাটিয়াদী</string>
    <string name="kuliarchar_thana_kishoreganj">কুলিয়ারচর</string>
    <string name="mithamain_thana_kishoreganj">মিঠামাইন</string>
    <string name="nikli_thana_kishoreganj">নিকলই</string>
    <string name="pakundia_thana_kishoreganj">পাকুন্দিয়া</string>
    <string name="tarail_thana_kishoreganj">তাড়াইল</string>
    <string name="bhalkua_thana_mymensingh">ভালুকা</string>
    <string name="dhobaura_thana_mymensingh">ধবাউরা</string>
    <string name="fulbaria_thana_mymensingh">ফুলবাড়িয়া</string>
    <string name="gaffargaon_thana_mymensingh">গফরগা</string>
    <string name="gauripur_thana_mymensingh">গৌরীপুর</string>
    <string name="haluaghat_thana_mymensingh">হালুয়াঘাট</string>
    <string name="ishwarganj_thana_mymensingh">ঈশ্বরগঞ্জ</string>
    <string name="muktagachha_thana_mymensingh">মুক্তাগাছা</string>
    <string name="nandail_thana_mymensingh">নান্দাইল</string>
    <string name="phulpur_thana_mymensingh">ফুলপুর</string>
    <string name="trisal_thana_mymensingh">ত্রিশাল</string>
    <string name="tara_kanda_thana_mymensingh">তারাকান্দা</string>
</resources>