<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_alignParentRight="true"
    android:layout_alignParentTop="true" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btnNariSurokkha"
            style="@style/ButtonText"
            android:layout_width="fill_parent"
            android:layout_height="58sp"
            android:layout_marginTop="18dp"
            android:background="@drawable/pink_button"
            android:text="@string/nari_surokkha_button" />

        <Button
            android:id="@+id/btnDhakaDivision"
            style="@style/ButtonText"
            android:layout_width="fill_parent"
            android:layout_height="58sp"
            android:layout_marginTop="15dp"
            android:background="@drawable/red_button"
            android:text="@string/dhaka_division_button" />

        <Button
            android:id="@+id/btnKhulnaDivision"
            style="@style/ButtonText"
            android:layout_width="fill_parent"
            android:layout_height="58sp"
            android:layout_marginTop="15dp"
            android:background="@drawable/blue_button"
            android:text="@string/khulna_division_button" />

        <Button
            android:id="@+id/btnChittaongDivision"
            style="@style/ButtonText"
            android:layout_width="fill_parent"
            android:layout_height="58sp"
            android:layout_marginTop="15dp"
            android:background="@drawable/green_button"
            android:text="@string/chittagong_division_button" />

        <Button
            android:id="@+id/btnRajshahiDivision"
            style="@style/ButtonText"
            android:layout_width="fill_parent"
            android:layout_height="58sp"
            android:layout_marginTop="15dp"
            android:background="@drawable/yellow_button"
            android:text="@string/rajshahi_division_button" />

        <Button
            android:id="@+id/btnBorishalDivision"
            style="@style/ButtonText"
            android:layout_width="fill_parent"
            android:layout_height="58sp"
            android:layout_marginTop="15dp"
            android:background="@drawable/purple_button"
            android:text="@string/borisal_division_button" />

        <Button
            android:id="@+id/btnSylhetDivision"
            style="@style/ButtonText"
            android:layout_width="fill_parent"
            android:layout_height="58sp"
            android:layout_marginTop="15dp"
            android:background="@drawable/black_button"
            android:text="@string/sylhet_division_button" />

        <Button
            android:id="@+id/btnRangpurDivision"
            style="@style/ButtonText"
            android:layout_width="fill_parent"
            android:layout_height="58sp"
            android:background="@drawable/golden_button"
            android:text="@string/rangpur_division_button" />
    </LinearLayout>

</ScrollView>