<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/mymensingh_district" >

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="80sp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="26dp"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btnTrisalThanaMymensingh"
            android:layout_width="80sp"
            android:layout_height="60sp"
            android:layout_marginTop="16dp"
            android:background="@drawable/dhaka_rounded_corner_button_design"
            android:text="@string/trisal_thana_mymensingh"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btnTarakandiThanaThanaMymensingh"
            android:layout_width="80sp"
            android:layout_height="60sp"
            android:layout_marginTop="16dp"
            android:background="@drawable/dhaka_rounded_corner_button_design"
            android:text="@string/tara_kanda_thana_mymensingh"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btnPhulpurThanaMymensingh"
            android:layout_width="80sp"
            android:layout_height="60sp"
            android:layout_marginTop="16dp"
            android:background="@drawable/dhaka_rounded_corner_button_design"
            android:text="@string/phulpur_thana_mymensingh"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btnNandailThanaMymensingh"
            android:layout_width="80sp"
            android:layout_height="60sp"
            android:layout_marginTop="16dp"
            android:background="@drawable/dhaka_rounded_corner_button_design"
            android:text="@string/nandail_thana_mymensingh"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="80sp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btnSadarThanaMymensingh"
            android:layout_width="80sp"
            android:layout_height="60sp"
            android:layout_marginTop="16dp"
            android:background="@drawable/dhaka_rounded_corner_button_design"
            android:text="@string/sadar_thana"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btnMuktagachaThanaMymensingh"
            android:layout_width="80sp"
            android:layout_height="60sp"
            android:layout_marginTop="16dp"
            android:background="@drawable/dhaka_rounded_corner_button_design"
            android:text="@string/muktagachha_thana_mymensingh"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btnIshwarganjThanaMymensingh"
            android:layout_width="80sp"
            android:layout_height="60sp"
            android:layout_marginTop="16dp"
            android:background="@drawable/dhaka_rounded_corner_button_design"
            android:text="@string/ishwarganj_thana_mymensingh"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btnHaluaghatThanaMymensingh"
            android:layout_width="80sp"
            android:layout_height="60sp"
            android:layout_marginTop="16dp"
            android:background="@drawable/dhaka_rounded_corner_button_design"
            android:text="@string/haluaghat_thana_mymensingh"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btnGauripurThanaMymensingh"
            android:layout_width="80sp"
            android:layout_height="60sp"
            android:layout_marginTop="16dp"
            android:background="@drawable/dhaka_rounded_corner_button_design"
            android:text="@string/gauripur_thana_mymensingh"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="80sp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="22dp"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btnBhalukaThanaMymensingh"
            android:layout_width="80sp"
            android:layout_height="60sp"
            android:layout_marginTop="16dp"
            android:background="@drawable/dhaka_rounded_corner_button_design"
            android:text="@string/bhalkua_thana_mymensingh"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btnDhobauraThanaMymensingh"
            android:layout_width="80sp"
            android:layout_height="60sp"
            android:layout_marginTop="16dp"
            android:background="@drawable/dhaka_rounded_corner_button_design"
            android:text="@string/dhobaura_thana_mymensingh"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btnFulbariaThanaMymensingh"
            android:layout_width="80sp"
            android:layout_height="60sp"
            android:layout_marginTop="16dp"
            android:background="@drawable/dhaka_rounded_corner_button_design"
            android:text="@string/fulbaria_thana_mymensingh"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btnGaffargaonThanaMymensingh"
            android:layout_width="80sp"
            android:layout_height="60sp"
            android:layout_marginTop="16dp"
            android:background="@drawable/dhaka_rounded_corner_button_design"
            android:text="@string/gaffargaon_thana_mymensingh"
            android:textSize="12sp" />
    </LinearLayout>

</RelativeLayout>